--- a/react-projects/markdown-previewer/src/style.scss
+++ b/react-projects/markdown-previewer/src/style.scss
@@ -1,113 +1,138 @@
-#background {
-  background: AliceBlue;
-  border: 1px AliceBlue solid;
-  min-height: 100vh;
-  min-width: fit-content;
-}
 
-#main {
+/***   Variables.   ***/
+/* Widths of both panels. */
+$editor-section-width: 82%;
+$preview-section-width: 96%;
+
+/* Border and box shadow around both panels. */
+$section-border: 3px solid black;
+$section-box-shadow: 0.25em 0.25em 0.25em 0px darkgray;
+
+body {
   font-family: Aldrich, monospace;
+  font-size: 16px;
+  color: black;
+  background-color: AliceBlue;
+  margin: 0;
+  text-align: left;
+  line-height: 1.2;
 }
 
-#title {
+main {
+  min-width: 321px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+header, footer {
   text-align: center;
 }
 
-$section-border: 3px ridge black;
+header#title, footer {
+  width: $preview-section-width;
+  margin: 1.5em auto;
+  line-height: 1.3;
+}
 
-/* the header at the top of both panels */
-.section-header {
-  background: lightsteelblue;
-  padding: 5px;
+/* The header at the top of both panels. */
+/* Contains an <h2> and a maximise <button>. */
+header.section-header {
+  $padding: 0.5em;
+
+  background-color: lightsteelblue;
+  padding: $padding;
   border-bottom: $section-border;
   position: relative;
-  
+
+  /* The panel title. */
   h2 {
-    text-align: center;
-    margin: 0px;
+    margin: 0.3em 0 0;
   }
-  
-  /* these are shades of SteelBlue */
+
+  /* These are shades of SteelBlue. */
   $button-color: hsl(207, 44%, 49%);
   $button-border-color: hsl(207, 44%, 44%);
-  
+
   $button-color-hover: hsl(207, 44%, 60%);
   $button-border-color-hover: hsl(207, 44%, 55%);
-  
-  .max-button {
+
+  /* The maximise <button>. */
+  button.max-button {
+    font-size: 1em;
     background-color: $button-color;
-    border: 4px outset $button-border-color;
+    border: 0.25em outset $button-border-color;
     position: absolute;
-    right: 6px;
-    top: 7px;
-    bottom: 6px;
+    right: $padding;
+    top: $padding;
+    bottom: $padding;
   }
-  
-  .max-button:hover {
+
+  button.max-button:hover {
     background-color: $button-color-hover;
     border-color: $button-border-color-hover;
   }
 }
 
-/* the top panel holding the editor */
-#editor-section {
-  min-width: 320px;
-  max-width: 1000px;
-  width: 50%;
+/* The top panel holding the editor. */
+section#editor-section {
   margin: auto;
+  width: $editor-section-width;
   border: $section-border;
-  box-shadow: 4px 4px 3px 0px darkgray;
+  box-shadow: $section-box-shadow;
 }
 
-/* the editor text area */
-#editor {
+/* The editor text area. */
+textarea#editor {
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 0.95em;
+  color: azure;
+  background-color: darkslategray;
+  box-sizing: border-box;
   min-height: 100px;
   height: 35vh;
-  width: 99.45%;
-  margin: 0px;
-  font-family: 'Share Tech Mono', monospace;
-  background: darkslategray;
-  color: azure;
+  width: 100%;
+  margin: 0;
+  padding: 1em;
+  border: none;
 }
 
-/* the bottom panel holding the preview area */
-#preview-section {
-  min-width: 380px;
-  max-width: 1200px;
-  width: 60%;
-  margin: 5vh auto 5vh;
+/* The bottom panel holding the preview area. */
+section#preview-section {
+  margin: 3em auto 2em;
+  width: $preview-section-width;
   border: $section-border;
-  box-shadow: 5px 5px 4px 0px darkgray;
+  box-shadow: $section-box-shadow;
 }
 
-/* the actual preview area */
-#preview {
-  padding: 12px;
-  background: lavender;
-  color: darkslategray;
-  
-  /* styles for the parsed markdown elements */
+/* The actual preview area. */
+div#preview {
+  $preview-color: darkslategray;
+
+  color: $preview-color;
+  background-color: lavender;
+  padding: 1em;
+
+  /* Styles for the parsed markdown elements. */
   table {
     border-collapse: collapse;
   }
-  
+
   th, td {
-    padding: 3px;
+    padding: 0.25em;
   }
-  
+
   table, th, td {
-    border: 2px solid black;
+    border: 2px solid $preview-color;
   }
-  
+
   pre, code {
-    background: ghostwhite;
+    background-color: ghostwhite;
+    padding: 2px;
+    line-height: 1.3;
   }
-  
-  img {
-    max-width: 95%;
-    display: block;
-    height: auto;
-    margin: 5px;
+
+  ul, ol {
+    padding-left: 2em;
   }
 }
 
@@ -115,38 +140,8 @@ $section-border: 3px ridge black;
  ***   Media Queries   ***
  *************************/
 
-@media (min-width: 1921px) {
-  #background {
-    font-size: 1.3em;
+@media (max-width: 370px) {
+  body {
+    font-size: 14px;
   }
-  #editor {
-    font-size: 1em;
-  }
-}
-
-@media (max-width: 1440px) {
-  #editor-section {
-    width: 60%;
-  }
-  #preview-section {
-    width: 70%;
-  }
-}
-
-@media (max-width: 1024px) {
-  #editor-section {
-    width: 70%;
-  }
-  #preview-section {
-    width: 80%;
-  }  
-}
-
-@media (max-width: 768px) {
-  #editor-section {
-    width: 80%;
-  }
-  #preview-section {
-    width: 90%;
-  }  
 }
