--- a/react-projects/drum-machine/src/style.scss
+++ b/react-projects/drum-machine/src/style.scss
@@ -1,141 +1,139 @@
-#background {
-  font-family: "Metal Mania";
-  background-color: lightgray;
-  border: 1px solid lightgray;
-  min-height: 97vh;
-  min-width: fit-content;
-}
 
-#header {
-  text-align: center;
+body {
+  font-family: "Metal Mania", sans-serif;
+  font-size: 16px;
   color: black;
-  width: 95%;
+  background-color: lightgray;
+  max-width: 500px;
+  min-width: 320px;
   margin: auto;
+  text-align: center;
 }
 
-/* the main section */
-#drum-machine {
+/* The container for the entire app. */
+div#root {
+  padding: 0 2%;
+}
+
+/* The main drum app. */
+main {
   background-color: hsl(0, 0%, 45%);
-  border: 5px double black;
+  padding: 2em;
+  margin: 1.5em auto 2em;
+  border: 0.4em double black;
   border-radius: 5%;
   box-shadow: 3px 3px 2px 0px black;
-  padding: 25px;
-  max-width: 480px;
-  min-width: 220px;
-  margin: auto auto 5vh;
 }
 
-/* section holding the display and the drum grid */
-#drum-grid-section {
-  height: 250px;
+/* The section holding the display and the drum grid. */
+section#drum-grid-section {
+  height: 16em;
   position: relative;
+  margin-top: 1.2em;
 }
 
-/* displays the last played drum pad */
-#display {
+/* Displays the last played drum pad. */
+div#display {
   color: pink;
-  text-align: center;
   font-style: italic;
   font-size: 1.3em;
 }
 
-/* 3x3 grid of drum pads */
-#drum-grid {
-  /* anchor it to the bottom of parent container */
+/* A 3x3 grid of drum pads. */
+div#drum-grid {
+  /* Anchor it to the bottom of parent container. */
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
 
-  /* There are 3 grid columns and 4 column gaps,
-   * including the edge gaps.
-   * Using this approach instead of horizontal "padding",
-   * as it seems to produce strange sizing behaviour.
-   */
+  /* There are 3 grid columns and 4 column gaps, including the edge gaps. */
   $column-gap: 8%;
   $column-width: (100% - $column-gap * 4) / 3;
-  
+
   display: grid;
   grid-template-columns: repeat(3, $column-width);
   grid-template-rows: repeat(3, 1fr);
   justify-content: space-evenly;
-  grid-row-gap: 15px;
-  padding: 30px 0px;
+  grid-row-gap: 1em;
+  padding: 1em 0;
 }
 
-/* the clickable drum pad button */
-.drum-pad {
-  font-family: "Metal Mania";
+/* The clickable drum pad button. */
+button.drum-pad {
+  font-family: "Metal Mania", sans-serif;
   font-size: 1.3em;
-  background-color: black;
   color: pink;
-  border: 7px outset hsl(0, 0%, 65%);
-  border-radius: 6px;
+  background-color: black;
+  border: 0.4em outset hsl(0, 0%, 60%);
+  border-radius: 0.3em;
 }
 
-.drum-pad:hover {
-  background-color: hsl(0, 0%, 25%);
-  border-color: hsl(0, 0%, 70%);
+button.drum-pad:hover {
+  background-color: hsl(0, 0%, 27%);
+  border-color: hsl(0, 0%, 72%);
 }
 
-.drum-pad:disabled {
-  background-color: hsl(0, 0%, 20%);
+button.drum-pad:disabled {
   color: hsl(0, 0%, 40%);
+  background-color: hsl(0, 0%, 20%);
   border-color: hsl(0, 0%, 65%);
 }
 
-/* the slider/switch input elements */
-.switch {
+/* The slider/switch input elements. */
+div.switch {
   clear: both;
-  height: 55px;
-  
-  /* description of the switch and its state */
+  height: 3em;
+
+  /* Description of the switch and its state. */
   p {
     float: left;
     color: black;
     font-weight: bold;
-    
-    .state-desc {
+
+    span.state-desc {
       color: pink;
       font-weight: normal;
     }
   }
-  
-  /* The actual slider bar */
-  .range-input {
+
+  /* The actual slider bar. */
+  input.range-input {
     float: right;
-    margin-top: 15px;
+    font-size: 1em;
+    margin: 1.25em 0 0;
     width: 10%;
-    height: 8px;
-    -webkit-appearance: none;  /* Override default CSS styles */
+    height: 0.5em;
+    -webkit-appearance: none;  /* Override default CSS styles. */
     appearance: none;
     background-color: crimson;
     border-radius: 50%;
   }
-  
-  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) 
-     and -moz- (Firefox) to override default look) */
+
+  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge)
+     and -moz- (Firefox) to override default look). */
   @mixin slider-thumb() {
-    width: 10px;
-    height: 30px;
+    width: 0.6em;
+    height: 2em;
     background-color: black;
-    border-radius: 50%;    
+    border: none;
+    border-radius: 50%;
   }
-  
-  .range-input::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+
+  input.range-input::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look. */
     @include slider-thumb();
   }
-  
-  .range-input::-moz-range-thumb {
+
+  input.range-input::-moz-range-thumb {
     appearance: none;
     @include slider-thumb();
   }
 }
 
-.slider {
+div.slider {
   @extend .switch;
-  
-  .range-input {
+
+  input.range-input {
     width: 50%;
   }
 }
@@ -144,24 +142,14 @@
  ***   Media Queries   ***
  *************************/
 
-@media (min-width: 1921px) {
-  #background {
-    font-size: 1.5em;
-  }
-  
-  #drum-grid-section {
-    height: 300px;
+@media (max-width: 400px) {
+  body {
+    font-size: 14px;
   }
 }
 
-@media (max-width: 1920px) {
-  #background {
-    font-size: 1.1em;
+@media (max-width: 350px) {
+  body {
+    font-size: 12px;
   }
-}
-
-@media (max-width: 1440px) {
-  #background {
-    font-size: 1em;
-  }  
 }
