Updated drum app key handling

--- a/react-projects/drum-machine/src/style.scss
+++ b/react-projects/drum-machine/src/style.scss
@@ -10,8 +10,7 @@ body {
   text-align: center;
 }
 
-/* The container for the entire app. */
-div#root {
+header, div#app, footer {
   padding: 0 2%;
 }
 
