--- a/d3-projects/treemap/src/style.css
+++ b/d3-projects/treemap/src/style.css
@@ -1,131 +1,110 @@
-body {
-  background-color: ghostwhite;
-  font-family: Quantico;
-}
 
-#title, #description {
+body {
+  font-family: Quantico, sans-serif;
+  color: black;
+  background-color: ghostwhite;
+  box-sizing: border-box;
+  min-width: 320px;
+  margin: 0;
+  padding: 0 1%;
   text-align: center;
 }
 
-/* the container of the <svg> element */
-#svg-div {
+h1 {
+  font-size: 3em;
+}
+
+header p {
+  font-size: 1.5em;
+}
+
+/* The container of the <svg> element. */
+main#svg-container {
   position: relative;
   max-width: 1400px;
   margin: auto;
 }
 
-/* tiles of the treemap */
-.tile {
+/* Treemap tiles. */
+rect.tile {
   stroke: black;
 }
 
-/* treemap tile labels */
-.tile-label {
+/* Treemap tile labels. */
+tspan.tile-label {
   pointer-events: none;
 }
 
-/* legend tiles */
-.legend-item {
+/* Legend tiles. */
+rect.legend-item {
   stroke: black;
 }
 
-/* labels of the legend cells */
-.legend-label {
+/* Legend tile labels. */
+text.legend-label {
   font-size: 2em;
 }
 
-/* the tooltip container */
-#tooltip {
+/* The tooltip container. */
+div#tooltip {
   position: absolute;
-  border: 2px solid darkslategray;
-  box-shadow: 0px 0px 5px 2px darkslategray;
-  background-color: aliceblue;
   max-width: 25%;
   padding: 0.8em;
+  background-color: aliceblue;
+  border: 0.1em solid darkslategray;
+  box-shadow: 0px 0px 0.3em 0.1em darkslategray;
   pointer-events: none;
 }
 
-/* overlay for highlighting selected cell */
-#overlay {
+/* Overlay for highlighting the selected tile. */
+rect#overlay {
   fill: aliceblue;
   fill-opacity: 0.3;
   stroke: black;
   pointer-events: none;
 }
 
-/* Media Queries */
-@media (min-width: 1441px) {
-  #title {
-    font-size: 40px;
+/***   Media Queries   ***/
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2.5em;
   }
-  
-  #description {
-    font-size: 1.5em;
-  }
-  
-  #tooltip {
+
+  header p {
     font-size: 1.2em;
   }
-}
 
-@media (max-width: 1440px) {
-  #title {
-    font-size: 35px;
-  }
-  
-  #description {
-    font-size: 1.3em;
-  }
-}
-
-@media (max-width: 1024px) {
-  #tooltip {
+  div#tooltip {
     font-size: 0.9em;
-    padding: 0.5em;
-  }
-}
-
-@media (max-width: 768px) {
-  #title {
-    font-size: 30px;
-  }
-  
-  #description {
-    font-size: 1.1em;
-  }
-
-  #tooltip {
-    font-size: 0.7em;
+    padding: 0.6em;
   }
 }
 
 @media (max-width: 500px) {
-  #title {
-    font-size: 25px;
+  h1 {
+    font-size: 2em;
   }
-  
-  #description {
+
+  header p {
     font-size: 1em;
   }
-  
-  #tooltip {
-    font-size: 0.5em;
-    padding: 0.4em;
-    border-width: 1px;
-    box-shadow: 0px 0px 2px 1px darkslategray;
+
+  div#tooltip {
+    font-size: 0.8em;
+    padding: 0.5em;
   }
 }
 
 @media (max-width: 425px) {
-  #title {
-    font-size: 20px;
+  div#tooltip {
+    font-size: 0.7em;
+    padding: 0.4em;
   }
-  
-  #description {
-    font-size: 0.8em;
-  }
-  
-  #tooltip {
-    font-size: 0.4em;
+}
+
+@media (max-width: 350px) {
+  div#tooltip {
+    font-size: 0.6em;
   }
 }
