--- a/d3-projects/choropleth/src/style.css
+++ b/d3-projects/choropleth/src/style.css
@@ -1,54 +1,68 @@
+
 body {
+  font-family: 'Noto Serif', serif;
   color: floralwhite;
   background-color: hsl(0, 100%, 10%);
-  font-family: 'Noto Serif', serif;
-}
-
-#title {
+  min-width: 320px;
+  margin: 0;
   text-align: center;
 }
 
-/* the container holding the <svg> element */
-#svg-div {
-  position: relative;
+h1 {
+  font-size: 3em;
 }
 
-/* the counties on the plot */
+a {
+	color: hsl(204deg 64% 75%);
+}
+
+a:visited {
+	color: hsl(270deg 50% 85%);
+}
+
+/* The container holding the <svg> element. */
+main#svg-container {
+  position: relative;
+  max-width: 1400px;
+  margin: auto;
+}
+
+/* The counties on the plot. */
 .county {
   stroke: floralwhite;
 }
 
-/* the state borders on the plot */
+/* The state borders on the plot. */
 .state {
   stroke: hsl(0, 100%, 10%);
   fill: transparent;
   pointer-events: none;
 }
 
-/* the legend and its axis */
+/* The legend and its axis. */
 #legend {
   font-size: 1.5em;
   fill: floralwhite;
 }
 
 #legend-axis {
-  font-size: 1em;
   font-family: 'Noto Serif', serif;
+  font-size: 1em;
   stroke-width: 2;
 }
 
-/* the tooltip */
+/* The tooltip. */
 #tooltip {
-  position: absolute;
-  background-color: hsl(0, 100%, 25%); 
-  border: 2px solid hsl(0, 100%, 10%);
-  box-shadow: 0px 0px 10px 5px hsl(0, 0%, 30%);
-  text-align: center;
+  font-size: 1.3em;
   padding: 0.7em;
+  position: absolute;
+  background-color: hsl(0, 100%, 25%);
+  border: 2px solid hsl(0, 100%, 10%);
+  box-shadow: 0px 0px 0.4em 0.2em hsl(0, 0%, 30%);
   pointer-events: none;
 }
 
-/* the county overlay when hovered */
+/* The county overlay when hovered. */
 #overlay {
   stroke: hsl(0, 100%, 35%);
   stroke-width: 2;
@@ -56,74 +70,52 @@ body {
   pointer-events: none;
 }
 
-/* Media Queries */
-@media (min-width: 1921px) {
-  #title {
-    font-size: 60px;
-  }
-  
-  #tooltip {
-    font-size: 1.3em;
-  }
-}
-
-@media (max-width: 1920px) {
-  #title {
-    font-size: 50px;
-  }
-}
-
-@media (max-width: 1440px) {
-  #title {
-    font-size: 40px;
-  }
-}
+/*************************/
+/***   Media Queries   ***/
+/*************************/
 
 @media (max-width: 1024px) {
-  #title {
-    font-size: 30px;
-  }
-  
   #tooltip {
-    font-size: 0.9em;
+    font-size: 1em;
   }
 }
 
 @media (max-width: 768px) {
-  #title {
-    font-size: 25px;
+  h1 {
+    font-size: 2.5em;
   }
-  
+
   #tooltip {
     font-size: 0.8em;
     padding: 0.6em;
-    box-shadow: 0px 0px 7px 3px hsl(0, 0%, 30%);
-  }
-}
-
-@media (max-width: 600px) {
-  #tooltip {
-    font-size: 0.7em;
-    box-shadow: 0px 0px 5px 2px hsl(0, 0%, 30%);
   }
 }
 
 @media (max-width: 500px) {
-  #title {
-    font-size: 20px;
+  h1 {
+    font-size: 2em;
   }
-  
+
   #tooltip {
-    font-size: 0.6em;
+    font-size: 0.7em;
     padding: 0.5em;
-    box-shadow: 0px 0px 3px 1px hsl(0, 0%, 30%);
+  }
+
+  footer {
+    font-size: 0.9em;
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 400px) {
+  h1 {
+    font-size: 1.5em;
+  }
+
   #tooltip {
-    font-size: 0.5em;
-    box-shadow: 0px 0px 2px 1px hsl(0, 0%, 30%);
-    border-width: 1px;
+    font-size: 0.6em;
+  }
+
+  footer {
+    font-size: 0.8em;
   }
 }
