--- a/d3-projects/heatmap/src/style.css
+++ b/d3-projects/heatmap/src/style.css
@@ -1,32 +1,41 @@
+
 body {
   font-family: 'Acme', sans-serif;
-  background-color: snow;
   color: midnightblue;
-}
-
-#title {
+  background-color: snow;
+  box-sizing: border-box;
+  min-width: 320px;
+  padding: 0 1%;
+  margin: 0;
   text-align: center;
 }
 
-#description {
+h1 {
+  font-size: 3em;
+}
+
+header p {
   font-size: 1.3em;
-  text-align: center;
 }
 
-/* the container holding the <svg> canvas */
-#svg-div {
+/* The container holding the <svg> canvas. */
+main#svg-container {
   position: relative;
-  background-color: lightcyan;
-  border: 1px solid darkslategray;
-  box-shadow: 0px 0px 10px 4px darkslategray;
   max-width: 1200px;
   margin: 2em auto;
+  background-color: lightcyan;
+  border: 1px solid darkslategray;
+  box-shadow: 0px 0px 0.6em 0.3em darkslategray;
 }
 
-/* the axes and their labels */
+svg, footer {
+  font-size: 1rem;
+}
+
+/* The axes and their labels. */
 #x-axis, #y-axis {
-  font-size: 1.5em;
   font-family: 'Acme', sans-serif;
+  font-size: 1.5em;
 }
 
 #x-axis-label, #y-axis-label {
@@ -34,95 +43,97 @@ body {
   fill: midnightblue;
 }
 
-/* the plot legend */
+/* The plot legend. */
 #legend {
   font-size: 1.5em;
   fill: midnightblue;
 }
 
 #legend-axis {
-  font-size: 1em;
   font-family: 'Acme', sans-serif;
+  font-size: 1em;
 }
 
-/* the tooltip container */
+/* The tooltip container. */
 #tooltip {
   position: absolute;
+  padding: 0.4em 0.5em;
   border: 1px solid slategray;
-  box-shadow: 0px 0px 4px 2px slategray;
-  padding: 0.5em;
+  box-shadow: 0px 0px 0.25em 0.125em slategray;
   line-height: 1.5em;
-  text-align: center;
   pointer-events: none;
 }
 
-/* the cell overlay for highlighting */
+/* The cell overlay for highlighting. */
 #overlay {
   pointer-events: none;
 }
 
-/* Media Queries */
+/*************************/
+/***   Media Queries   ***/
+/*************************/
 
 @media (max-width: 1024px) {
+  #tooltip {
+    padding: 0.3em 0.5em;
+    line-height: 1.4em;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2.5em;
+  }
+
   #tooltip {
     font-size: 0.9em;
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 700px) {
   #tooltip {
     font-size: 0.8em;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2em;
+  }
+
   #tooltip {
     font-size: 0.7em;
-    box-shadow: 0px 0px 3px 1px slategray;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 540px) {
+  body {
+    font-size: 0.9em;
+  }
+
+  #tooltip {
+    line-height: 1.3em;
+  }
+}
+
+@media (max-width: 460px) {
+  body {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 400px) {
   #tooltip {
     font-size: 0.6em;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 350px) {
   #tooltip {
-    font-size: 0.5em;
+    padding: 0.2em 0.4em;
   }
-  #title {
-    font-size: 30px;
-  }
-  #description {
-    font-size: 1.2em;
-  }
-}
 
-@media (max-width: 500px) {
-  #tooltip {
-    font-size: 0.4em;
-    box-shadow: 0px 0px 2px 1px slategray;
-    padding: 0.4em;
-    line-height: 1.4em;
-  }
-  #title {
-    font-size: 25px;
-  }
-  #description {
-    font-size: 1.1em;
-  }
-}
-
-@media (max-width: 370px) {
-  #tooltip {
-    font-size: 0.35em;
-  }
-  #title {
-    font-size: 20px;
-  }
-  #description {
-    font-size: 1em;
+  footer {
+    font-size: 0.9rem;
   }
 }
