--- a/d3-projects/scatterplot/src/style.css
+++ b/d3-projects/scatterplot/src/style.css
@@ -1,29 +1,51 @@
+
 body {
   font-family: 'Fjalla One', sans-serif;
-  background-color: black;
   color: honeydew;
-}
-
-#title, #sub-title {
+  background-color: black;
+  box-sizing: border-box;
+  min-width: 320px;
+  padding: 0 1%;
+  margin: 0;
   text-align: center;
 }
 
-/* the container housing the <svg> canvas */
-#svg-div {
-  position: relative;
-  background-color: hsl(120, 100%, 10%);
-  border: 3px solid honeydew;
-  border-radius: 20px;
-  max-width: 1000px;
-  margin: auto;
+h1 {
+  font-size: 3em;
 }
 
-/* class for every plotted data circle */
+header p {
+  font-size: 1.4em;
+}
+
+a {
+	color: hsl(204deg 64% 75%);
+}
+
+a:visited {
+	color: hsl(270deg 50% 85%);
+}
+
+/* The container housing the <svg> canvas. */
+main#svg-container {
+  position: relative;
+  max-width: 1000px;
+  margin: 1.5em auto;
+  background-color: hsl(120, 100%, 10%);
+  border: 3px solid honeydew;
+  border-radius: 1.25em;
+}
+
+svg, footer {
+  font-size: 1rem;
+}
+
+/* Every plotted data circle. */
 .dot {
   stroke-width: 2;
 }
 
-/* x and y axes and their labels */
+/* The x and y axes and their labels. */
 #x-axis, #y-axis {
   font-family: 'Fjalla One', sans-serif;
   font-size: 1.8em;
@@ -36,140 +58,142 @@ body {
   fill: honeydew;
 }
 
-/* the legend box in the plot */
+/* The legend box in the plot. */
 #legend {
-  color: white;
+  font-size: 1.1em;
   position: absolute;
-  top: 15px;
+  top: 0.8em;
   left: 40%;
-  background-color: hsl(120, 25%, 30%);
-  border: 2px solid honeydew;
-  border-radius: 5px;
-  max-width: 200px;
-  width: 25%;
+  width: 11em;
   display: grid;
   grid-template-columns: 1em 1fr;
-  grid-gap: 0.5em;
+  grid-row-gap: 0.5em;
+  grid-column-gap: 0.3em;
   padding: 0.5em;
+  color: white;
+  background-color: hsl(120, 25%, 30%);
+  border: 2px solid honeydew;
+  border-radius: 0.4em;
+  text-align: left;
 }
 
-/* the color tile in the legend box */
+/* The color tile in the legend box. */
 .legend-tile {
   border-style: solid;
   border-width: 2px;
+  border-radius: 0.2em;
 }
 
-/* the tooltip box in the plot */
+/* The tooltip box in the plot. */
 #tooltip {
-  line-height: 1.6em;
+  position: absolute;
   padding: 1em;
   color: white;
   border-style: solid;
   border-width: 2px;
-  border-radius: 10px;
-  position: absolute;
+  border-radius: 0.65em;
+  line-height: 1.6em;
+  text-align: left;
   pointer-events: none;
 }
 
-/* overlay for highlighting selected circle */
+/* Overlay for highlighting selected circle. */
 #overlay {
   pointer-events: none;
 }
 
-/* Media Queries */
-@media (min-width: 1920px) {
-  #title {
-    font-size: 40px;
-  }
-  #sub-title {
-    font-size: 1.4em;
-  }
-  #legend, #tooltip {
-    font-size: 1.1em;
-  }
-}
+/*************************/
+/***   Media Queries   ***/
+/*************************/
 
-@media (max-width: 840px) {
+@media (max-width: 900px) {
   #legend {
-    top: 12px;
+    font-size: 1em;
+    top: 0.7em;
   }
+
   #tooltip {
     font-size: 0.9em;
+    padding: 0.8em;
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
   #legend {
     font-size: 0.9em;
-    top: 10px;
+    top: 0.6em;
   }
+
   #tooltip {
     font-size: 0.8em;
+    padding: 0.7em;
   }
 }
 
 @media (max-width: 670px) {
   #legend {
     font-size: 0.8em;
-    top: 5px;
+    top: 0.5em;
   }
+
   #tooltip {
     font-size: 0.7em;
+    padding: 0.6em;
   }
 }
 
-@media (max-width: 590px) {
-  #legend {
-    font-size: 0.7em;
-    border-width: 1px;
-  }
-  .legend-tile {
-    border-width: 1px;
-  }
-  #tooltip {
-    font-size: 0.6em;
-    border-width: 1px;
+@media (max-width: 600px) {
+  body {
+    font-size: 0.9em;
   }
 }
 
 @media (max-width: 560px) {
+  body {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2.5em;
+  }
+
+  #legend {
+    font-size: 0.7em;
+    top: 0.4em;
+  }
+
+  #tooltip {
+    font-size: 0.6em;
+    padding: 0.5em;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 2em;
+  }
+
   #legend {
     font-size: 0.6em;
   }
-}
 
-@media (max-width: 510px) {
-  #title {
-    font-size: 30px;
-  }
-  #legend, #tooltip {
+  #tooltip {
     font-size: 0.5em;
   }
-}
 
-@media (max-width: 430px) {
-  #title {
-    font-size: 25px;
-  }
-  #sub-title {
-    font-size: 0.9em;
-  }
-  #tooltip {
-    font-size: 0.4em;
-  }
-  #legend {
-    top: 3px;
+  footer {
+    font-size: 0.9rem;
   }
 }
 
-@media (max-width: 370px) {
-  #title {
-    font-size: 20px;
-  }
+@media (max-width: 350px) {
   #legend {
-    font-size: 0.4em;
+    font-size: 0.5em;
   }
+
   #tooltip {
-    font-size: 0.3em;
+    font-size: 0.4em;
   }
 }
