--- a/html-projects/documentation-page/src/style.css
+++ b/html-projects/documentation-page/src/style.css
@@ -1,152 +1,158 @@
-.text {
-  font-family: Baskervville;
+
+/* Variables. */
+:root {
+  --nav-width: 15em;
+  --main-border: azure 0.5em solid;
+  --nav-link-border: azure 1px solid;
+}
+
+html {
+  font-family: Baskervville, sans-serif;
   color: ghostwhite;
-}
-
-.nav-text {
-  font-family: Fira Sans;
-  color: ghostwhite;
-}
-
-.title-text {
-  font-family: Anton;
-  color: ghostwhite;
-  text-align: center;
-  padding: 5px;
-}
-
-#navbar {
-  background: hsl(19, 56%, 20%);
-  position: fixed;
-  width: 20vw;
-  height: 97vh;
-  border: azure 5px solid;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav-link {
-  color: snow;
-  background: hsl(19, 56%, 30%);
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  border: azure 1px solid;
-  padding: 12px;
-}
-
-.nav-link:hover {
-  animation-name: nav-hover;
-  animation-duration: 100ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes nav-hover {
-  100% {
-    background: hsl(19, 56%, 40%);
-  }
-}
-
-.nav-link:focus {
-  background: hsl(19, 56%, 40%);
-}
-
-#main-doc {
-  background: hsl(0, 100%, 8%);
-  border: azure 5px solid;
-  margin-left: 21vw;
-  padding-left: 30px;
-  padding-right: 40px;
   text-align: justify;
 }
 
-.code {
-  color: darkslategray;
-  background: whitesmoke;
-  border-radius: 4px;
-  margin-left: 20px;
-  padding-right: 10px;
-  min-width: fit-content;
-  width: 60%;
+body {
+  min-width: 320px;
+  margin: 0;
 }
 
-#ref-link {
-  color: lightcyan;
+h1 {
+  font-family: Anton, sans-serif;
+  text-align: center;
+}
+
+h2 {
+  font-family: Fira Sans, sans-serif;
+}
+
+nav {
+  font-family: Fira Sans, sans-serif;
+  position: fixed;
+  box-sizing: border-box;
+  width: var(--nav-width);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(19, 56%, 20%);
+  border: var(--main-border);
+  overflow-y: auto;
+}
+
+nav header {
+  border-bottom: var(--nav-link-border);
+}
+
+a.nav-link {
+  color: snow;
+  background-color: hsl(19, 56%, 30%);
+  display: block;
+  padding: 0.8em;
+  text-align: center;
+  text-decoration: none;
+  border-bottom: var(--nav-link-border);
+}
+
+a.nav-link:hover, a.nav-link:focus {
+  background-color: hsl(19, 56%, 40%);
+}
+
+a.nav-link:visited {
+  color: snow;
+}
+
+main {
+  margin-left: var(--nav-width);
+  padding: 0 1em;
+  background-color: hsl(0, 100%, 8%);
+  border: var(--main-border);
+  border-left: none;
+  overflow: hidden;
+}
+
+section {
+  font-size: 1rem;
+}
+
+ul, ol {
+  padding-left: 2em;
+}
+
+.code {
+  width: min-content;
+  margin-left: 1em;
+  padding-right: 1em;
+  color: darkslategray;
+  background-color: whitesmoke;
+  border-radius: 0.4em;
+}
+
+a {
+	color: hsl(204deg 64% 75%);
+}
+
+a:visited {
+	color: hsl(270deg 50% 85%);
 }
 
 /*************************
  ***   Media Queries   ***
  *************************/
 
-@media (min-width: 1920px) {
-  #main-doc {
-    font-size: 1.4em;
-  }
-  .nav-link {
+/* Min width. */
+@media (min-width: 1440px) {
+  html {
     font-size: 1.1em;
   }
 }
 
-@media (min-width: 1440px) {
-  #navbar {
-    width: 285px;
-  }
-  #main-doc {
-    margin-left: 300px;
+@media (min-width: 1920px) {
+  html {
+    font-size: 1.2em;
   }
 }
 
-@media (max-width: 1440px) {
-  .nav-link {
+/* Max width. */
+@media (max-width: 768px) {
+  body {
     font-size: 0.9em;
-    padding: 10px;
-  }
-  .title-text {
-    font-size: 20px;
   }
 }
 
-@media (max-width: 820px) {
-  .nav-link {
-    font-size: 0.8em;
-    padding: 8px;
+@media (max-width: 600px) {
+  :root {
+    --nav-width: 14em;
   }
-  .title-text {
-    font-size: 15px;
+
+  body {
+    font-size: 0.8em;
   }
 }
 
 @media (max-width: 500px) {
+  html {
+    font-size: 0.9em;
+  }
+
   .code {
     font-size: 0.8em;
   }
 }
 
 @media (max-width: 430px) {
-  .nav-link {
+  body {
     font-size: 0.7em;
-    padding: 6px;
-  }
-  .title-text {
-    font-size: 12px;
-  }
-  #navbar {
-    width: 90px;
-  }
-  #main-doc {
-    margin-left: 95px;
-  }
-  .code {
-    font-size: 0.6em;
   }
 }
 
-@media (max-width: 375px) {
-  #navbar {
-    width: 80px;
+@media (max-width: 370px) {
+  .code {
+    font-size: 0.7em;
   }
-  #main-doc {
-    margin-left: 86px;
-    width: 180px;
+}
+
+@media (max-width: 345px) {
+  html {
+    font-size: 0.8em;
   }
 }
