--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -280,6 +280,16 @@ a.footer-link:focus {
   color: var(--color);
 }
 
+/* Screen-reader only, visually hidden. */
+.screen-reader-only {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
 /*************************
  ***   Media Queries   ***
  *************************/
